[package]
name = "spiral_galaxy"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
bevy = "0.13.2"


bevy_egui = "0.27.0"

ratatui = { version = "0.26.2", default-features = false }
egui_ratatui = {version = "0.0.9"}
egui = "0.27.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

web-time = {version = "1" }



[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2